--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
             <div class="social-icons">
                 <div class="icon_circle"></div>
-                <div class="icon"><a href=""><i class='bx bxl-instagram'></i></a></div>
+                <div class="icon"><a href="https://www.instagram.com/vigneshp_37?igsh=MW4wNmJkdWRlMjdtcw=="><i class='bx bxl-instagram'></i></a></div>
                 <div class="icon"><a href="https://www.linkedin.com/in/vignesh-prabhu-t-472274290"><i class='bx bxl-linkedin' ></i></a></div>
                 <div class="icon"><a href="https://github.com/vp37"><i class='bx bxl-github'></i></a></div>
                 <div class="icon"><a href="https://maps.app.goo.gl/qmsVz8DritGaFdyv6"><i class='bx bx-map' ></i></a></div>
@@ -74,7 +74,7 @@
           </div>
           <div class="text_image">
             <div class="seco_img">
-                <img src="./assest/view-3d-boy-using-laptop_23-2150709886.avif" alt="">
+                <img src="./assest/IMG_1742-removebg-preview.png" alt="">
             </div>
           </div>
         </section>
