--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li class="item"><a href="#About" class="navlink">About Me</a></li>
                     <li class="item"><a href="#Skills" class="navlink">Skills</a></li>
                     <li class="item"><a href="#Education" class="navlink">Education</a></li>
-                    <li class="item"><a href="#Contact" class="navlink">Contact Me</a></li>
+                    <li class="item"><a href="#Contact" class="navlink">Contact</a></li>
 
 
                     
