--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                  <p><i class='bx bx-map'></i>  Chennai</p>
             </div>
             <div class="text_btn">
-                <button class="hire_btn">Hire Me</button>
+                <button class="hire_btn" onclick="Hireme()">Hire Me</button>
                 <button class="down_btn" id="downloadCvBtn">Download Cv <i class='bx bx-down-arrow-circle' ></i></button>
                 
             </div>
