--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="header">
             <div class="head">
-                <h1 class="h1name">Vignesh Prabhu </h1>
+                <h1 class="h1name">Vignesh Prabhu T</h1>
             </div>
             <div class="navmenu" id="myNavMenu">
                 <ul class="navlist">
